@@ -20,6 +20,7 @@ import com.microsoft.azure.kusto.data.ClientFactory;
 import com.microsoft.azure.kusto.data.StreamingClient;
 import com.microsoft.azure.kusto.data.auth.ConnectionStringBuilder;
 
+import org.apache.commons.lang3.tuple.Pair;
 import org.apache.nifi.annotation.documentation.CapabilityDescription;
 import org.apache.nifi.annotation.documentation.Tags;
 import org.apache.nifi.annotation.lifecycle.OnEnabled;
@@ -32,7 +33,6 @@ import org.apache.nifi.processor.util.StandardValidators;
 
 import java.io.InputStream;
 import java.net.URISyntaxException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -53,7 +53,7 @@ public class StandardKustoQueryService extends AbstractControllerService impleme
             .displayName("Authentication Strategy")
             .description("Authentication method for access to Azure Data Explorer")
             .required(true)
-            .defaultValue(KustoAuthenticationStrategy.MANAGED_IDENTITY.getValue())
+            .defaultValue(KustoAuthenticationStrategy.MANAGED_IDENTITY)
             .allowableValues(KustoAuthenticationStrategy.class)
             .build();
 
@@ -71,7 +71,7 @@ public class StandardKustoQueryService extends AbstractControllerService impleme
             .description("Azure Data Explorer Application Tenant Identifier for Authentication")
             .required(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
-            .dependsOn(AUTHENTICATION_STRATEGY, KustoAuthenticationStrategy.APPLICATION_CREDENTIALS.getValue())
+            .dependsOn(AUTHENTICATION_STRATEGY, KustoAuthenticationStrategy.APPLICATION_CREDENTIALS)
             .build();
 
     public static final PropertyDescriptor APPLICATION_KEY = new PropertyDescriptor.Builder()
@@ -81,10 +81,10 @@ public class StandardKustoQueryService extends AbstractControllerService impleme
             .required(true)
             .sensitive(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
-            .dependsOn(AUTHENTICATION_STRATEGY, KustoAuthenticationStrategy.APPLICATION_CREDENTIALS.getValue())
+            .dependsOn(AUTHENTICATION_STRATEGY, KustoAuthenticationStrategy.APPLICATION_CREDENTIALS)
             .build();
 
-    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = Arrays.asList(
+    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
             CLUSTER_URI,
             AUTHENTICATION_STRATEGY,
             APPLICATION_CLIENT_ID,
@@ -98,6 +98,8 @@ public class StandardKustoQueryService extends AbstractControllerService impleme
     public List<PropertyDescriptor> getSupportedPropertyDescriptors() {
         return PROPERTY_DESCRIPTORS;
     }
+
+    public static final Pair<String, String> NIFI_SOURCE = Pair.of("processor", "nifi-source");
 
     @OnEnabled
     public void onEnabled(final ConfigurationContext context) throws ProcessException, URISyntaxException {
@@ -144,25 +146,20 @@ public class StandardKustoQueryService extends AbstractControllerService impleme
 
     @SuppressWarnings("unchecked")
     private ConnectionStringBuilder getConnectionStringBuilder(final ConfigurationContext context) {
-        final ConnectionStringBuilder builder;
-
         final String clusterUrl = context.getProperty(CLUSTER_URI).getValue();
         final String clientId = context.getProperty(APPLICATION_CLIENT_ID).getValue();
+        final KustoAuthenticationStrategy kustoAuthenticationStrategy = context.getProperty(AUTHENTICATION_STRATEGY).asAllowableValue(KustoAuthenticationStrategy.class);
 
-        final KustoAuthenticationStrategy kustoAuthenticationStrategy = KustoAuthenticationStrategy.valueOf(context.getProperty(AUTHENTICATION_STRATEGY).getValue());
+        final ConnectionStringBuilder builder = switch (kustoAuthenticationStrategy) {
+            case APPLICATION_CREDENTIALS -> {
+                final String applicationKey = context.getProperty(APPLICATION_KEY).getValue();
+                final String tenantId = context.getProperty(APPLICATION_TENANT_ID).getValue();
+                yield ConnectionStringBuilder.createWithAadApplicationCredentials(clusterUrl, clientId, applicationKey, tenantId);
+            }
+            case MANAGED_IDENTITY -> ConnectionStringBuilder.createWithAadManagedIdentity(clusterUrl, clientId);
+        };
 
-        if (KustoAuthenticationStrategy.MANAGED_IDENTITY == kustoAuthenticationStrategy) {
-            builder = ConnectionStringBuilder.createWithAadManagedIdentity(clusterUrl, clientId);
-        } else {
-            final String applicationKey = context.getProperty(APPLICATION_KEY).getValue();
-            final String tenantId = context.getProperty(APPLICATION_TENANT_ID).getValue();
-            builder = ConnectionStringBuilder.createWithAadApplicationCredentials(clusterUrl, clientId, applicationKey, tenantId);
-        }
-
-        final String vendor = System.getProperty("java.vendor");
-        final String version = System.getProperty("java.version");
-
-        builder.setConnectorDetails(vendor, version, null, null, false, null);
+        builder.setConnectorDetails("Kusto.Nifi.Source", StandardKustoQueryService.class.getPackage().getImplementationVersion(), null, null, false, null, NIFI_SOURCE);
         return builder;
     }
 }
