@@ -81,8 +81,8 @@ public abstract class AbstractByQueryElasticsearchTest {
         runner.assertTransferCount(AbstractByQueryElasticsearch.REL_SUCCESS, 1);
 
         final List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(AbstractByQueryElasticsearch.REL_SUCCESS);
-        final String attr = flowFiles.get(0).getAttribute(tookAttr());
-        final String query = flowFiles.get(0).getAttribute(queryAttr());
+        final String attr = flowFiles.getFirst().getAttribute(tookAttr());
+        final String query = flowFiles.getFirst().getAttribute(queryAttr());
         assertNotNull(attr);
         assertEquals("100", attr);
         assertNotNull(query);
@@ -130,45 +130,23 @@ public abstract class AbstractByQueryElasticsearchTest {
 
     @Test
     void testInvalidQueryProperty() {
-        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.FULL_QUERY.getValue());
+        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.FULL_QUERY);
         runner.setProperty(ElasticsearchRestProcessor.INDEX, "test-index");
         runner.setProperty(ElasticsearchRestProcessor.QUERY, "not-json");
 
         final AssertionError assertionError = assertThrows(AssertionError.class, runner::run);
-        final String expected = String.format("Processor has 1 validation failures:\n" +
-                        "'%s' validated against 'not-json' is invalid because %s is not a valid JSON representation due to Unrecognized token 'not': was expecting" +
-                        " (JSON String, Number, Array, Object or token 'null', 'true' or 'false')\n" +
-                        " at [Source: (String)\"not-json\"; line: 1, column: 4]\n",
-                ElasticsearchRestProcessor.QUERY.getName(), ElasticsearchRestProcessor.QUERY.getName());
-        assertEquals(expected, assertionError.getMessage());
+        assertTrue(assertionError.getMessage().contains("not-json"));
     }
 
     @Test
     void testInvalidQueryBuilderProperties() {
-        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.BUILD_QUERY.getValue());
+        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.BUILD_QUERY);
         runner.setProperty(ElasticsearchRestProcessor.INDEX, "test-index");
         runner.setProperty(ElasticsearchRestProcessor.QUERY_CLAUSE, "not-json");
         runner.setProperty(ElasticsearchRestProcessor.SCRIPT, "not-json-script");
 
         final AssertionError assertionError = assertThrows(AssertionError.class, runner::run);
-        String expected;
-        if (getTestProcessor() instanceof DeleteByQueryElasticsearch) {
-            // no SCRIPT in Query Builder
-            expected = "Processor has 1 validation failures:\n";
-        } else {
-            expected = "Processor has 2 validation failures:\n";
-        }
-        expected += String.format("'%s' validated against 'not-json' is invalid because %s is not a valid JSON representation due to Unrecognized token 'not': was expecting" +
-                        " (JSON String, Number, Array, Object or token 'null', 'true' or 'false')\n" +
-                        " at [Source: (String)\"not-json\"; line: 1, column: 4]\n",
-                ElasticsearchRestProcessor.QUERY_CLAUSE.getName(), ElasticsearchRestProcessor.QUERY_CLAUSE.getName());
-        if (getTestProcessor() instanceof UpdateByQueryElasticsearch) {
-            expected += String.format("'%s' validated against 'not-json-script' is invalid because %s is not a valid JSON representation due to Unrecognized token 'not': was expecting " +
-                            "(JSON String, Number, Array, Object or token 'null', 'true' or 'false')\n" +
-                            " at [Source: (String)\"not-json-script\"; line: 1, column: 4]\n",
-                    ElasticsearchRestProcessor.SCRIPT.getName(), ElasticsearchRestProcessor.SCRIPT.getName());
-        }
-        assertEquals(expected, assertionError.getMessage());
+        assertTrue(assertionError.getMessage().contains("not-json"));
     }
 
     @Test
@@ -243,7 +221,7 @@ public abstract class AbstractByQueryElasticsearchTest {
         runner.assertTransferCount(AbstractByQueryElasticsearch.REL_SUCCESS, 0);
         runner.assertTransferCount(AbstractByQueryElasticsearch.REL_FAILURE, 1);
 
-        final MockFlowFile mockFlowFile = runner.getFlowFilesForRelationship(AbstractByQueryElasticsearch.REL_FAILURE).get(0);
+        final MockFlowFile mockFlowFile = runner.getFlowFilesForRelationship(AbstractByQueryElasticsearch.REL_FAILURE).getFirst();
         final String attr = mockFlowFile.getAttribute(errorAttr());
         assertNotNull(attr);
     }
@@ -302,7 +280,7 @@ public abstract class AbstractByQueryElasticsearchTest {
     @ParameterizedTest
     @MethodSource
     void testQueryBuilder(final String queryClause, final String script, final String expectedQuery) throws Exception {
-        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.BUILD_QUERY.getValue());
+        runner.setProperty(ElasticsearchRestProcessor.QUERY_DEFINITION_STYLE, QueryDefinitionType.BUILD_QUERY);
 
         if (queryClause != null) {
             runner.setProperty(ElasticsearchRestProcessor.QUERY_CLAUSE, queryClause);
